fixing logo styling on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1265,7 +1265,6 @@ a.fritz {
 
   .logo {
     width: 160px;
-    padding-left: 1rem;
   }
 }
 
